08_TAD_generico/TAD_gen_06/Resultados/Rafael/numcomplexo/result_compilation.txt
numcomplexo.c:79:2: error: #endif without #if
   79 | #endif
      |  ^~~~~
